--- a/style.sass
+++ b/style.sass
@@ -73,7 +73,7 @@ body
             width: 750px
             height: 750px
             background-color: $cthree
-            box-shadow: -10px -12px 6px 3px white, 12px 0px 10px 3px rgba(0,0,0,0.15)
+            box-shadow: -12px -12px 10px 3px white, 12px 0px 10px 3px rgba(#A2B4C6,0.4)
             // border-top: 2px solid white
             // border-left: 2px solid white
             position: relative
@@ -220,7 +220,7 @@ body
         font-weight: 800
         outline: none
         border: 1px solid $ctwo
-        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, .8), 6px 6px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1) 
+        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, .8), 12px 12px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1) 
         &:hover
             background: $cthree
             color: $ctwo
