--- a/style.sass
+++ b/style.sass
@@ -212,8 +212,7 @@ body
         margin-top: 103px
         margin-bottom: 100px
         margin-left: 70px
-        // background: linear-gradient(45deg, $csix 20%, $ctwo)
-        background: $csix
+        background: linear-gradient(45deg, $csix 20%, $ctwo)
         color: $cthree
         font-size: 31px
         border-radius: 20px
@@ -279,12 +278,14 @@ body
         padding-left: 0px
         text-align: center
         #inputsContainer
-            margin-top: 300px
+            margin-top: 330px
             margin-left: auto
             margin-right: auto
-            width: 90%
+            width: 100%
             h1
                 font-size: 30px
+                text-align: left
+                margin-left: 25px
             #inputs
                 width: 100%
                 flex-direction: row
@@ -295,14 +296,17 @@ body
         #multiple
             width: 100%
             margin-top: 90px
-            align-items: center
+            h5
+                text-align: left
+                width: 100%
+                margin-left: 40px
 
         #play
             border: 1px solid $ctwo
             width: 292px
             height: 103px
             margin-top: 110px
-            margin-bottom: -50px
+            margin-bottom: 30px
             margin-left: 0px
             color: $cthree
             font-size: 31px
@@ -319,20 +323,22 @@ body
             #titles
                 top: 0px
                 margin: 0
+                margin-left: 20px
                 width: 100%
                 left: 0
-                text-align: center
+                text-align: left
                 h1
                     font-size: 60px
                     margin: 0
+                    margin-bottom: 20px
                     width: 100%
-                    text-align: center
+                    text-align: left
                 h5
-                    width: 100%
+                    width: 80%
                     font-size: 24px
-                    text-align: center
+                    text-align: left
             #wheel
-                margin-top: 100px
+                margin-top: 50px
                 // margin-bottom: 50px
                 min-width: 600px
                 min-height: 600px
@@ -363,7 +369,7 @@ body
         #inputsContainer
             margin-top: 300px
             h1
-                margin-bottom: 25px
+                margin-bottom: 45px
                 font-size: 25px
             #inputs
                 .option
@@ -378,12 +384,12 @@ body
         #multiple
             h5
                 width: 100%
-                text-align: center
+                // text-align: center
                 margin-right: 0
     #wheelSide
         #wheelContainer
             #wheel
-                margin-top: 120px
+                margin-top: 70px
                 // margin-bottom: 50px
                 min-width: 450px
                 min-height: 450px
@@ -406,7 +412,7 @@ body
 @media (max-width: 500px)
     #textSide
         #inputsContainer
-            margin-top: 250px
+            margin-top: 300px
             #addOptionContainer
                 width: 100%
                 min-width: 60px
