--- a/style.sass
+++ b/style.sass
@@ -106,7 +106,8 @@ body
                 list-style: none
                 li
                     font-size: 20px
-                    margin-left: 200px
+                    margin-left: 20px
+                    text-align: left
                     &:first-child
                         font-size: 35px
                         font-weight: 700
@@ -351,9 +352,9 @@ body
             #decisions
                 width: 100%
                 margin-left: 0px
-                align-self: center
-                align-items: center
-                text-align: center
+                align-self: left
+                align-items: left
+                text-align: left
                 h2
                     text-align: center
                 ul
