--- a/style.sass
+++ b/style.sass
@@ -5,7 +5,7 @@ $cthree: #F7F9FC
 $cfour: #F4F4F3
 $cfive: #A2B4C6
 $csix: #9F9A53
-    
+
 *
     margin: 0
     padding: 0
@@ -15,7 +15,6 @@ $csix: #9F9A53
     font-family: 'Manrope', sans-serif
 
 body
-    // background-color: azure
     font-family: 'Manrope', sans-serif
     color: $cone
     text-align: left
@@ -41,10 +40,7 @@ body
 
 #wheelSide
     background-color: $cthree
-    // position: relative
     #wheelContainer
-        // height: 100vh
-        // margin-top: 100px
         z-index: 1
         width: 100%
         z-index: 10
@@ -53,18 +49,15 @@ body
             position: absolute
             left: 220px
             h1
-                // width: 1000px
                 font-size: 90px
                 font-weight: 900
                 text-align: left
-                // transform: translateX(45px)
                 margin-top: 80px
-            
+
             h5
                 width: 1000px
                 text-align: left
                 font-size: 31px
-                // transform: translateX(45px)
 
         #wheel
             margin-top: 470px
@@ -74,8 +67,6 @@ body
             height: 750px
             background-color: $cthree
             box-shadow: -12px -12px 10px 3px white, 12px 0px 10px 3px rgba(#A2B4C6,0.4)
-            // border-top: 2px solid white
-            // border-left: 2px solid white
             position: relative
             .canvasContainer
                 display: flex
@@ -92,7 +83,6 @@ body
 
         #decisions
             width: 100%
-            // text-align: left
             align-self: flex-start
             flex-direction: column
             align-items: flex-start
@@ -101,7 +91,6 @@ body
             h2
                 margin-top: 50px
                 text-align: left
-                // font-weight: bold
             ul
                 list-style: none
                 li
@@ -113,7 +102,6 @@ body
                         font-weight: 700
 
         footer
-            // width: 1000px
             width: 100%
             align-self: flex-start
             margin-left: 220px
@@ -130,7 +118,6 @@ body
     #inputsContainer
         width: 419px
         margin-top: 470px
-        // text-align: center
         h1
             font-size: 40px
             margin-bottom: 40px
@@ -169,7 +156,7 @@ body
                 box-shadow: -12px -12px 20px 2px rgba(#FFFEEF, 1), 0px 3px 15px 5px rgba(0,0,0, 0.16), 1px 0px 0px 0px rgba(#FFFEEF, 1)
                 &:hover
                     background: $ctwo
-                
+
                 img
                     position: absolute
                     top: 50%
@@ -178,7 +165,6 @@ body
                     box-shadow: -12px -12px 30px 1px rgba(#FFFEEF, 0.5)
 
     #multiple
-        // width: 574px
         margin-top: 112px
         align-items: baseline
         padding-left: 10px
@@ -220,14 +206,13 @@ body
         font-weight: 800
         outline: none
         border: 1px solid $ctwo
-        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, .8), 12px 12px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1) 
+        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, .8), 12px 12px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1)
         &:hover
             background: $cthree
             color: $ctwo
 
 .nonDisplay
     display: none
-
 
 @media (max-width: 1700px)
     #textSide
@@ -340,7 +325,6 @@ body
                     text-align: left
             #wheel
                 margin-top: 50px
-                // margin-bottom: 50px
                 min-width: 600px
                 min-height: 600px
                 width: 600px
@@ -357,6 +341,7 @@ body
                 text-align: left
                 h2
                     text-align: center
+                    margin-left: 40px
                 ul
                     li
                         margin: 0
@@ -385,13 +370,11 @@ body
         #multiple
             h5
                 width: 100%
-                // text-align: center
                 margin-right: 0
     #wheelSide
         #wheelContainer
             #wheel
                 margin-top: 70px
-                // margin-bottom: 50px
                 min-width: 450px
                 min-height: 450px
                 width: 450px
@@ -399,7 +382,7 @@ body
                 img
                     position: absolute
                     top: 195px
-                    left: 380px   
+                    left: 380px
                     transform: scale(0.7)
             #decisions
                 h2
@@ -425,8 +408,6 @@ body
                 h1
                     font-size: 35px
             #wheel
-                // margin-top: 100px
-                // margin-bottom: 50px
                 min-width: 250px
                 min-height: 250px
                 width: 250px
@@ -434,6 +415,5 @@ body
                 img
                     position: absolute
                     top: 95px
-                    left: 180px   
+                    left: 180px
                     transform: scale(0.4)
-
