update enter key functionality

--- a/style.sass
+++ b/style.sass
@@ -109,6 +109,10 @@ body
             margin-bottom: 20px
             text-align: left
 
+            span
+                position: absolute
+                bottom: 50px
+
 #textSide
     background-color: rgba($ctwo, 0.15)
     color: $ctwo
