--- a/style.css
+++ b/style.css
@@ -149,6 +149,11 @@ body {
   text-align: left;
 }
 
+#wheelSide #wheelContainer footer span {
+  position: absolute;
+  bottom: 50px;
+}
+
 #textSide {
   background-color: rgba(114, 107, 0, 0.15);
   color: #726B00;
